prevod statickych linku na relativni

--- a/docs/admMan/apiExecutionTesting.mdx
+++ b/docs/admMan/apiExecutionTesting.mdx
@@ -11,7 +11,7 @@ After the application deployment, you want to execute components APIs and see th
 
 ## Before you begin
 
-- [Deploy your application](https://vitsestak.github.io/code_now/docs/admMan/depApp/)
+- [Deploy your application](../admMan/depApp/)
 
 ## Steps
 
