--- a/docs/admMan/createNewApplication.mdx
+++ b/docs/admMan/createNewApplication.mdx
@@ -16,7 +16,7 @@ How to create a new application.
 1. Create a new application in your customer space.
     - An application consists of one or more simple microservice components. 
     - An application in the microservice architecture is described by application components and their orchestration.
-2. See [How to Create a New Application Component](https://vitsestak.github.io/code_now/docs/admMan/creNewCom/) tutorial.
+2. See [How to Create a New Application Component](../admMan/creNewCom/) tutorial.
 
 ## Screenshot
 
