--- a/docs/admMan/createNewComponent.mdx
+++ b/docs/admMan/createNewComponent.mdx
@@ -13,7 +13,7 @@ How to create a new application component which encapsulates specific applicatio
 
 ## Prerequisites
 
-- Choose the existing application or [Create a New Application](https://vitsestak.github.io/code_now/docs/admMan/creNewApp/).
+- Choose the existing application or [Create a New Application](../admMan/creNewApp/).
 
 ## Steps
 
@@ -29,12 +29,12 @@ How to create a new application component which encapsulates specific applicatio
       - [.NET Core](https://docs.microsoft.com/en-us/dotnet/core/introduction) 
     - Wait for component creation and you will receive a Git repository link, where the component source code will be stored. 
     - Creating a managed component is another use case:
-      - [Get New Redis](https://vitsestak.github.io/code_now/docs/manComAdm/getNewRed/) 
-      - [Get New PostgreSQL](https://vitsestak.github.io/code_now/docs/manComAdm/getNewPos/)
-      - [Get New Kafka](https://vitsestak.github.io/code_now/docs/manComAdm/getNewApaKaf/)   
+      - [Get New Redis](../manComAdm/getNewRed/)
+      - [Get New PostgreSQL](../manComAdm/getNewPos/)
+      - [Get New Kafka](../manComAdm/getNewApaKaf/)
 
 
-2. Clone the Git repository using your favourite Git management tool. Use your personal [SSH key](https://vitsestak.github.io/code_now/docs/useAdm/sshSet/) and start the local development.
+2. Clone the Git repository using your favourite Git management tool. Use your personal [SSH key](../useAdm/sshSet/) and start the local development.
 
 ## What’s next?
 
