--- a/docs/admMan/deployApplication.mdx
+++ b/docs/admMan/deployApplication.mdx
@@ -13,7 +13,7 @@ How to deploy the application into the CodeNOW environment.
 
 ## Prerequisites
 
-- [Created application and application components](https://vitsestak.github.io/code_now/docs/admMan/creNewApp/)
+- [Created application and application components](../admMan/creNewApp/)
 - Improve application components code
 
 ## Steps
