--- a/docs/admMan/deploymentMonitoring.mdx
+++ b/docs/admMan/deploymentMonitoring.mdx
@@ -13,7 +13,7 @@ How to find the deployment status of your application and components in various 
 
 ## Prerequisites
 
-- [deployed application](https://vitsestak.github.io/code_now/docs/admMan/depApp/)
+- [deployed application](../admMan/depApp/)
 
 ## Steps
 
