--- a/docs/javMicExa/javaMicronautRestApi.mdx
+++ b/docs/javMicExa/javaMicronautRestApi.mdx
@@ -25,9 +25,9 @@ This example project can be cloned from: ```git@gitlab.factory.innobank.codenow.
 ## Prerequisites
 
 - Prepare your local development environment for CodeNOW with Micronaut. 
-  - Follow the tutorial instructions in the [Java Micronaut Local Development](https://vitsestak.github.io/code_now/docs/locDevWitCodNow/locDev/) tutorial.
+  - Follow the tutorial instructions in the [Java Micronaut Local Development](../locDevWitCodNow/locDev/) tutorial.
 - Create a new component
-  - For details, see the section *Prerequisites* of the [Java Micronaut Local Development](https://vitsestak.github.io/code_now/docs/locDevWitCodNow/locDev/) tutorial.
+  - For details, see the section *Prerequisites* of the [Java Micronaut Local Development](../locDevWitCodNow/locDev/) tutorial.
 
 ## Steps
 
@@ -140,15 +140,15 @@ Open your IDE, import the created component and start coding:
 
 - Do not forget to change the swagger.yaml. Check it in the example project: *src/main/resources/META-INF/swagger/swagger.yaml*
 - Try to build and run the application in your IDE. After startup, you should be able to access your new controller’s swagger: **[http://localhost:8080/swagger/index.html](http://localhost:8080/swagger/index.html)**
-  - For the correct setup, check the Readme.md in the project root or see the tutorial [Java Micronaut Local Development](https://vitsestak.github.io/code_now/docs/locDevWitCodNow/locDev/), section *Prepare local development IDE*
+  - For the correct setup, check the Readme.md in the project root or see the tutorial [Java Micronaut Local Development](../locDevWitCodNow/locDev/), section *Prepare local development IDE*
   - The component exposes a simple GET endpoint and can be tested using a browser call only. You should not forget to document your API and use the swagger-ui accordingly.
 
 <img alt="clientInfoServiceSwagger" src={useBaseUrl('img/javMicExa/javaMicronautRestApi/clientInformationService_swagger.png')} />
 
 ## What’s next?
 
-If your code works in the local development, you are ready to push your changes to GIT and try to build and deploy your new component version to the CodeNOW environment. For more information, see [Application Deployment](https://vitsestak.github.io/code_now/docs/admMan/depApp/) and [Monitoring](https://vitsestak.github.io/code_now/docs/admMan/depMon/).
+If your code works in the local development, you are ready to push your changes to GIT and try to build and deploy your new component version to the CodeNOW environment. For more information, see [Application Deployment](../admMan/depApp/) and [Monitoring](../admMan/depMon/).
 
-See our other developer guides to get orchestrated microservices [Micronaut REST Server with PostgreSQL](https://vitsestak.github.io/code_now/docs/javMicExa/micResSerPosSQL/) and [Micronaut REST Server with Redis and Kafka](https://vitsestak.github.io/code_now/docs/javMicExa/micResSerRedAndKaf/) working.
+See our other developer guides to get orchestrated microservices [Micronaut REST Server with PostgreSQL](../javMicExa/micResSerPosSQL/) and [Micronaut REST Server with Redis and Kafka](../javMicExa/micResSerRedAndKaf/) working.
 
 
