--- a/docs/locDevWitCodNow/javaSpringBootLocalDevelopment.mdx
+++ b/docs/locDevWitCodNow/javaSpringBootLocalDevelopment.mdx
@@ -16,7 +16,7 @@ How to set up your local development environment for:
 
 - Create a new CodeNOW component in your application.
     - Use the Java Spring Boot scaffolder.
-    - See the *[How to Create a New Application Component](https://vitsestak.github.io/code_now/docs/admMan/creNewCom/)* tutorial.
+    - See the *[How to Create a New Application Component](../admMan/creNewCom/)* tutorial.
 
 ## Prepare local development IDE
 
