--- a/docs/locDevWitCodNow/javaMicronautLocalDevelopment.mdx
+++ b/docs/locDevWitCodNow/javaMicronautLocalDevelopment.mdx
@@ -32,7 +32,10 @@ How to set up your local development environment for:
 
 - To run the project in the local development setup, check README.md . The required minimum is to set the path to Micronaut configuration file as a JVM startup parameter:
   - ```-Dmicronaut.config.files=file:config/application.yaml```
-    - Check the Run configuration dialog in your IDE and set this line as a VM argument
+    - Check the Run configuration dialog in your IDE and set this line as a VM argument in the JVM options.
+   - NOTE: You can also configure this server to listen on a custom port (the default port is 8080).
+    - ```-Dserver.port=9090```
+    - This comes in handy when running multiple projects at once, which is very common with micro-service oriented architecture.
 
 
 - Start Run/Debug in your IDE.
