change wrong link

--- a/docs/javMicExa/javaMicronautRestApi.mdx
+++ b/docs/javMicExa/javaMicronautRestApi.mdx
@@ -54,7 +54,7 @@ Open your IDE, import the created component and start coding:
 
 - Next, create http clients for calling the orchestrated endpoints. Example for ClientDataServiceClient:
   - The second required client ClientAuthorizationServiceClient can be found in the example project repository
-  - For more details about Micronaut clients: [https://docs.micronaut.io/latest/guide/http<Client.html#clientAnnotation](https://docs.micronaut.io/latest/guide/httpClient.html#clientAnnotation)
+  - For more details about Micronaut clients: [https://docs.micronaut.io/latest/guide/index.html#httpClient](https://docs.micronaut.io/latest/guide/index.html#httpClient)
   - Create a new Java interface:
 
     ```java
