ACA-227-Doplnit slug u vsech tutorialu

--- a/docs/admMan/alertingOverview.mdx
+++ b/docs/admMan/alertingOverview.mdx
@@ -1,6 +1,7 @@
 ---
 id: aleOve
 title: Alerting overview
+slug: /admin-manuals/alerting-overview
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
