--- a/docs/admMan/apiExecutionTesting.mdx
+++ b/docs/admMan/apiExecutionTesting.mdx
@@ -1,6 +1,7 @@
 ---
 id: apiExeTes
 title: API execution/testing
+slug: /admin-manuals/api-execution-testing
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
