--- a/docs/admMan/createNewApplication.mdx
+++ b/docs/admMan/createNewApplication.mdx
@@ -1,6 +1,7 @@
 ---
 id: creNewApp
 title: Create a New Application
+slug: /admin-manuals/create-new-application
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
