--- a/docs/admMan/createNewComponent.mdx
+++ b/docs/admMan/createNewComponent.mdx
@@ -1,6 +1,7 @@
 ---
 id: creNewCom
 title: Create a New Application Component
+slug: /admin-manuals/create-new-application-component
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
