--- a/docs/admMan/createNewEnvironment.mdx
+++ b/docs/admMan/createNewEnvironment.mdx
@@ -1,6 +1,7 @@
 ---
 id: creNewEnv
 title: Create a new environment
+slug: /admin-manuals/create-new-environment
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
