--- a/docs/admMan/deployApplication.mdx
+++ b/docs/admMan/deployApplication.mdx
@@ -1,6 +1,7 @@
 ---
 id: depApp
 title: Deploy application
+slug: /admin-manuals/deploy-application
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
