--- a/docs/admMan/deploymentMonitoring.mdx
+++ b/docs/admMan/deploymentMonitoring.mdx
@@ -1,6 +1,7 @@
 ---
 id: depMon
 title: Deployment Monitoring
+slug: /admin-manuals/deployment-monitoring
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
