--- a/docs/javMicExa/javaMicronautRestApi.mdx
+++ b/docs/javMicExa/javaMicronautRestApi.mdx
@@ -1,6 +1,7 @@
 ---
 id: micResApi
 title: Java Micronaut REST API
+slug: /java-micronaut-examples/java-micronaut-rest-api
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
