--- a/docs/javMicExa/javaMicronautRestServerWithPostrgeSql.mdx
+++ b/docs/javMicExa/javaMicronautRestServerWithPostrgeSql.mdx
@@ -1,6 +1,7 @@
 ---
 id: micResSerPosSQL
 title: Java Micronaut REST Server with PostgreSQL
+slug: /java-micronaut-examples/java-micronaut-rest-server-with-postgresql
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
