--- a/docs/javMicExa/javaMicronautRestServerWithRedisAndKafka.mdx
+++ b/docs/javMicExa/javaMicronautRestServerWithRedisAndKafka.mdx
@@ -1,6 +1,7 @@
 ---
 id: micResSerRedAndKaf
 title: Java Micronaut REST Server with Redis and Kafka
+slug: /java-micronaut-examples/java-micronaut-rest-server-with-redis-and-kafka
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
