--- a/docs/javSprBooExa/restApiAndKafkaMessagePublishing.mdx
+++ b/docs/javSprBooExa/restApiAndKafkaMessagePublishing.mdx
@@ -1,6 +1,7 @@
 ---
 id: resApiAndKafMesPub
 title: Java Spring Boot - REST API and Kafka Message Publishing
+slug: /java-micronaut-examples/java-spring-boot-rest-api-and-kafka-message-publishing
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
