--- a/docs/locDevWitCodNow/javaMicronautLocalDevelopment.mdx
+++ b/docs/locDevWitCodNow/javaMicronautLocalDevelopment.mdx
@@ -1,6 +1,7 @@
 ---
 id: micLocDev
 title: Java Micronaut – Local Development
+slug: /local-development/java-micronaut-local-development
 ---
 
 <!---komentar-->
