--- a/docs/locDevWitCodNow/javaSpringBootLocalDevelopment.mdx
+++ b/docs/locDevWitCodNow/javaSpringBootLocalDevelopment.mdx
@@ -1,6 +1,7 @@
 ---
 id: sprLocDev
 title: Java Spring Boot – Local Development
+slug: /local-development/java-spring-boot-local-development
 ---
 
 🕓 30 minutes 
