--- a/docs/locDevWitCodNow/javascriptReactLocalDevelopment.mdx
+++ b/docs/locDevWitCodNow/javascriptReactLocalDevelopment.mdx
@@ -1,6 +1,7 @@
 ---
 id: reaLocDev
 title: Javascript React Local Development
+slug: /local-development/javascript-react-local-development
 ---
 
 🕓 15 minutes 
