--- a/docs/manComAdm/getNewApacheKafka.mdx
+++ b/docs/manComAdm/getNewApacheKafka.mdx
@@ -1,6 +1,7 @@
 ---
 id: getNewApaKaf
 title: Get new Apache Kafka
+slug: /managed-components-administration/get-new-apache-kafka
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
