--- a/docs/manComAdm/getNewPostgresql.mdx
+++ b/docs/manComAdm/getNewPostgresql.mdx
@@ -1,6 +1,7 @@
 ---
 id: getNewPos
 title: Get new PostgreSQL
+slug: /managed-components-administration/get-new-postgresql
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
