--- a/docs/manComAdm/getNewRedis.mdx
+++ b/docs/manComAdm/getNewRedis.mdx
@@ -1,6 +1,7 @@
 ---
 id: getNewRed
 title: Get new Redis
+slug: /managed-components-administration/get-new-redis
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
