--- a/docs/useAdm/inviteNewCollaborator.mdx
+++ b/docs/useAdm/inviteNewCollaborator.mdx
@@ -1,6 +1,7 @@
 ---
 id: invNewCol
 title: Invite new collaborator
+slug: /users-administration/invite-new-collaborator
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
