--- a/docs/useAdm/sshSettings.mdx
+++ b/docs/useAdm/sshSettings.mdx
@@ -1,6 +1,7 @@
 ---
 id: sshSet
 title: SSH settings
+slug: /users-administration/ssh-settings
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
