ACA-195-Remove invalid step from tutorial

--- a/docs/locDevWitCodNow/javascriptReactLocalDevelopment.mdx
+++ b/docs/locDevWitCodNow/javascriptReactLocalDevelopment.mdx
@@ -21,7 +21,7 @@ How to set up your local development environment for:
 ## Prepare local development IDE
 
 - Clone code from the created git repository to your local machine.
-- Use your favourite IDE and import the repository as a maven project. You must have:
+- Use your favourite IDE. You must have:
   - an installed npm package manager https://www.npmjs.com/
 - To run the project in local development setup, check README.md
   - For installation of the required npm modules, go to project root and run the command below
