--- a/docs/javSprBooExa/SpringBootRestApi_Arina.mdx
+++ b/docs/javSprBooExa/SpringBootRestApi_Arina.mdx
@@ -7,7 +7,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 🕓 45 minutes
 
-## What you will learn: 
+## What you’ll learn:
 How to setup your application for: 
 
 - getting data from REST API,
