ACA-244- doplnit slugy u novych tutorialu

--- a/docs/javSprBooExa/SpringBootRestApi_Arina.mdx
+++ b/docs/javSprBooExa/SpringBootRestApi_Arina.mdx
@@ -1,6 +1,7 @@
 ---
 id: sprBooResApi
 title: Java Spring Boot REST API
+slug: /java-spring-boot-examples/java-spring-boot-rest-api
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
