--- a/docs/javMicExa/javaMicronautRestServerWithPostrgeSql.mdx
+++ b/docs/javMicExa/javaMicronautRestServerWithPostrgeSql.mdx
@@ -29,7 +29,8 @@ This example project can be cloned from: ```git@gitlab.factory.innobank.codenow.
 - Prepare your local development environment for CodeNOW with Micronaut. 
   - Follow the tutorial instructions in the [Java Micronaut Local Development](../locDevWitCodNow/locDev/) tutorial.
 - Run PostgreSQL locally. 
-  - Use docker compose as described in the section *Docker compose and third-party tools* of the [Java Micronaut Local Development](../locDevWitCodNow/locDev/) tutorial.
+  - You can run PostgreSQL directly or using docker compose. 
+  - Configuration file for docker-compose can be downloaded from the link that can be found in the section *Docker compose and third-party tools* of the [Java Micronaut Local Development](../locDevWitCodNow/locDev/) tutorial.
 - Create a new component
   - For details see the section *Prerequisites* of the [Java Micronaut Local Development](../locDevWitCodNow/locDev/) tutorial.
 
