Aca 244 doplnit slugy u novych tutorialu (#10)
* ACA-244- doplnit slugy u novych tutorialu

--- a/docs/javSprBooExa/javaSpringBootRestServerWithPostgreSql-arina.mdx
+++ b/docs/javSprBooExa/javaSpringBootRestServerWithPostgreSql-arina.mdx
@@ -1,6 +1,7 @@
 ---
 id: sprBooResSerPosSQL
 title: Java Spring Boot REST Server with PostgreSQL
+slug: /java-spring-boot-complex-examples/java-spring-boot-rest-server-with-postgresql
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
